Registration done/Sign up

--- a/Attendence_App/ionic.config.json
+++ b/Attendence_App/ionic.config.json
@@ -1,5 +1,8 @@
 {
   "name": "Attendence_App",
-  "integrations": {},
+  "integrations": {
+    "capacitor": {},
+    "cordova": {}
+  },
   "type": "angular"
 }
