--- a/Attendence_App/package.json
+++ b/Attendence_App/package.json
@@ -22,13 +22,16 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@capacitor/core": "1.5.0",
+    "@ionic-native/android-full-screen": "^5.21.6",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "body-parser": "^1.19.0",
+    "cordova": "^9.0.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-fullscreen": "^1.2.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "firebase": "^7.8.0",
@@ -83,7 +86,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-fullscreen": {}
     },
     "platforms": [
       "android"
