Barcode Generate and send to server , done

--- a/Attendence_App/package.json
+++ b/Attendence_App/package.json
@@ -38,6 +38,7 @@
     "http": "0.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "ngx-qrcode2": "0.0.9",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
