--- a/Attendence_App/package.json
+++ b/Attendence_App/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~8.1.2",
     "@capacitor/core": "1.5.0",
     "@ionic-native/android-full-screen": "^5.21.6",
+    "@ionic-native/barcode-scanner": "^5.22.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/qr-scanner": "^5.22.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -39,6 +41,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "ngx-qrcode2": "0.0.9",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -88,7 +91,10 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-fullscreen": {}
+      "cordova-plugin-fullscreen": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
